# OWSLib

./: .codacy.yml  .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  AUTHORS.txt  CHANGES.rst  CHANGES.txt  CHANGES_WMS130.txt  CREDITS.txt  DEPENDENCIES.txt  HISTORY.txt  INSTALL.txt  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  README.txt  README_WPS.txt  SECURITY.md  TESTING.txt  VERSION.txt  credits.html  development.html  examples.html  features.html  genindex.html  index.html  installation.html  introduction.html  license.html  logging.html  objects.inv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  runtests.py  search.html  (+8 more)
OWSLib.egg-info/: PKG-INFO  SOURCES.txt
_sources/: examples.rst.txt  features.rst.txt  index.rst.txt  index.txt  usage.rst.txt
_static/: documentation_options.js
binder/: environment.yml  postBuild
docs/: Makefile  conf.py  copy2sf.sh  publish.sh  requirements.txt
eggsrepo/: OWSLib_WCS-0.4-py2.5.egg  OWSLib_WMS-0.4-py2.5.egg
examples/: csw-client.py  csw-harvest.py  iso-getcodelist.py  wcps-processcoverage.py  wcs-thredds-prism.py  wfs-wei-script.py  wms-getfeatureinfo.py  wps-birdhouse.py  wps-ceda-script.py  wps-client.py  wps-climdaps.py  wps-pml-script-1.py  wps-pml-script-2.py  wps-rest-client.py  wps-script.py  wps-usgs-script.py
hobu/: setup.py
notebooks/: README.md
owslib/: __init__.py  crs.py  csw.py  dif.py  etree.py  fes.py  fes2.py  fgdc.py  filter.py  gm03.py  gml.py  interfaces.py  iso.py  iso3.py  iso_3.py  iso_che.py  namespaces.py  opensearch.py  ows.py  owscommon.py  setup.py  sml.py  sos.py  tms.py  util.py  wcs.py  wfs.py  wmc.py  wms.py  wmts.py  wps-ceda-script.py  wps.py  wps_utils.py
owslib.common/: setup.py
owslib.csw/: setup.py
owslib.sos/: setup.py
owslib.wcs/: setup.py
owslib.wfs/: setup.py
owslib.wms/: setup.py
owslib_wcs/: setup.py
sos/: CHANGES.txt
soswfsbranch/: setup.py
tests/: 9250AA67-F3AC-6C12-0CB9-0662231AA181_dc.xml  CEDAExecuteRequest.xml  JPLCapabilities.txt  JPLMap.txt  MapServerWFSCapabilities.txt  MapServerWFSFeature.txt  PMLCapabilities1.xml  PMLExecuteRequest4.xml  PMLExecuteRequest5.xml  PMLExecuteRequest6.xml  README.txt  TESTING.txt  TelaCapabilities.txt  USGSDescribeProcess.xml  USGSExecuteRequest1.xml  USGSExecuteRequest2.xml  USGSExecuteRequest3.xml  USGSExecuteRequest4.xml  USGSExecuteRequest5.xml  USGSExecuteRequest6.xml  USGSExecuteRequest7.xml  WMSCapabilities.txt  _testing.py  crs.txt  csw_devgeo.txt  csw_esri_gpt.txt  csw_gdp.txt  csw_geodata_gov.txt  csw_inspire.txt  csw_nlr.txt  cuahsi_example_get_values_10.xml  framework.py  (+152 more)
(+464 files in other folders)
