[bumpversion]
current_version = 0.17.0
commit = True
tag = True

[metadata]
description-file = README.rst

[bumpversion:file:owslib/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:VERSION.txt]
search = {current_version}
replace = {new_version}
